# mdk-parse

./: .gitignore  Cargo.toml  LICENSE.md  README.md  p4ignore.txt
cmi_interp/: cmi.ts  main.ts  package-lock.json  package.json  tsconfig.json
src/: cmi_bytecode.rs  dti.rs  fall3d.rs  gltf.rs  lib.rs  main.rs  named_vec.rs  output_writer.rs  reader.rs  stream.rs  todo.txt  traverse.rs  vectors.rs
src/data_formats/: animation.rs  bsp.rs  cmi_bytecode.rs  image_formats.rs  mesh.rs  mod.rs  pen.rs  spline.rs  texture.rs  wav.rs
src/file_formats/: bni.rs  cmi.rs  dti.rs  fti.rs  lbb.rs  mod.rs  mti.rs  mto.rs  sni.rs
src/gamemode_formats/: fall3d.rs  misc.rs  mod.rs  stream.rs  traverse.rs
