[package]
name = "mdk-parse"
version = "0.1.0"
edition = "2024"

[features]
readranges = ["dep:ranges"]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true

[dependencies]
base64 = "0.22.0"
png = "0.17.7"
ranges = { version = "0.4.0", optional = true }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
