[package]
name = "mdk-parse"
version = "0.1.0"
edition = "2024"
authors = ["brandonhare"]
description = "Parses and exports game assets from MDK (1997)"
repository = "https://github.com/brandonhare/mdk-parse"
license = "MIT"
keywords = ["asset", "3d", "loading"]
categories = ["encoding", "game-development", "multimedia", "rendering::data-formats"]
exclude = ["/assets", "/output"]
publish = false

[features]
default = []
readranges = ["dep:ranges"]

[dependencies]
base64 = "0.22.1"
png = "0.17.16"
ranges = { version = "0.4.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
